# constructor_macro

./: .gitignore  Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
