[package]
name = "constructor_macro"
version = "0.1.0"
edition = "2024"
description = "A derive proc-macro that automatically derives a constructor for your struct!"
readme = "README.md"
repository = "https://github.com/SciMind2460/constructor_macro"
license = "MIT OR Apache-2.0"
keywords = ["constructor", "derive"]

[dependencies]
constructor_macro_internal = "0"

[workspace]
members = ["constructor_macro_internal"]